<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F8F4"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/adlam_display"
            android:text="SIGN UP"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="Sign Up to Continue"
            android:textColor="#333333"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:hint="Name"
            android:textColor="#090909"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/usernameEditText2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:textColor="#090909"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/passwordEditText2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#020202"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/logInButton2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#1AA14A"
            android:drawablePadding="12dp"
            android:onClick="logInPage"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>